# fterm

./: BUILD_AND_DISTRIBUTE_MACOS.md  README.md  index.html  package-lock.json  package.json  release.sh
.github/workflows/: deploy-docs.yml  release.yml
docs/: index.md
docs/.vitepress/: config.ts
docs/.vitepress/theme/: style.css
docs/guide/: getting-started.md
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  lib.rs  main.rs  pty.rs
src/components/: Terminal.tsx
